...
        children: <Widget>[
          Padding(
            padding: EdgeInsets.fromLTRB(20, 20, 20, 20),
            child: Align(
              alignment: Alignment.topLeft,
              child: Text(
                "Rent",
                style: TextStyle(fontWeight: FontWeight.bold, fontSize: 34),
              ),
            ),
          ),
          SingleChildScrollView(
            scrollDirection: Axis.vertical,
...
              Container(
                padding: EdgeInsets.fromLTRB(10, 10, 10, 10),
                height: 220,
                width: double.maxFinite,
                child: Card(
                  child: GestureDetector(
                   key:Key('laptop-pic'),
                    onTap: () {
                      Navigator.push(
                          context,
                          MaterialPageRoute(
                              builder: (context) => AllProducts()));
                    },
...
